correction des fautes d'orthographe

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         
             <div id="element">
-                <h1>Caclcul IMC.</h1>
+                <h1>Calcul IMC.</h1>
 
                 <div id="conteneur__1-1">
                     <div id="formulaire">
@@ -25,7 +25,7 @@
                             </div>
 
                             <div class="input">
-                                <input type="text" id="poid" placeholder="Poid">
+                                <input type="text" id="poids" placeholder="Poids">
 
                                 <div class="fin">
                                     kg
